Test power consumption interface and function
