# src/backend/restapi/api/openapi.yml
@@ -575,6 +575,9 @@ paths:
               schema:
                 type: string
                 example: attachment; filename="<jobId>_<group>.json"
+      security:
+        - oauth2:
+            - benchmarks_r
   /measurements/{jobId}/csv:
    get:
       operationId: backend.restapi.api.measurements.export_csv
@@ -602,6 +605,29 @@ paths:
               schema:
                 type: string
                 example: attachment; filename="<jobId>_<group>.csv"
+      security:
+        - oauth2:
+            - benchmarks_r
+  /measurements/{jobId}/energy:
+   get:
+      operationId: backend.restapi.api.measurements.get_energy
+      parameters:
+        - $ref: "#/components/parameters/JobId"
+        - $ref: "#/components/parameters/MetricQuery"
+          required: true
+      tags:
+        - measurements
+      summary: Power consumption
+      responses:
+        "200":
+          description: Successfully got power consumption results in JSON format
+          content:
+            application/json:
+              schema:
+                type: object
+      security:
+        - oauth2:
+            - benchmarks_r
   /metrics:
     get:
       operationId: backend.restapi.api.measurements.get_available_metrics
